update to new GitHub API authentification